reload button mobile fix

--- a/server/static/css/story.css
+++ b/server/static/css/story.css
@@ -993,10 +993,10 @@ margin-top: -10%;
     /* top: 95%; */
     justify-content: flex-end;
     /* height: 100%; */
-    width: 100%;
+    width: 50%;
     /* padding-top: 8px; */
-    left: 45%;
-    /* margin-left: -45%; */
+    /* left: 45%; */
+    margin-left: 45%;
     bottom: 50%;
 
   }
@@ -1215,3 +1215,6 @@ margin-top: -10%;
     cursor: pointer;
     /* opacity: 50%; */
   }
+
+
+  
